# Final_Software

./: .gitignore  CMakeLists.txt  README.md  alarm.cpp  alarm.h  alarma.cpp  alarma.h  arduinouno.cpp  arduinouno.h  calefaccion.cpp  calefaccion.h  controller.cpp  controller.h  dialog2ports.cpp  dialog2ports.h  dialog2ports.ui  dialogcombobox.cpp  dialogcombobox.h  dialogcombobox.ui  dialognewpass.cpp  dialognewpass.h  dialognewpass.ui  dialogonetext.cpp  dialogonetext.ui  dialogpassword.cpp  dialogpassword.h  dialogpassword.ui  dialogport.cpp  dialogport.h  dialogport.ui  favicon.rc  heater.cpp  heater.h  lampara.cpp  lampara.h  light.cpp  light.h  main.cpp  mainwindow.cpp  mainwindow.h  (+8 more)
src/: arduinouno.cpp  arduinouno.h  dialogonetext.h  dialogtwotexts.cpp  dialogtwotexts.h  dialogtwotexts.ui  heater.cpp  main.cpp  mainwindow.h  mainwindow.ui  port.h  systemmanager.cpp  systemmanager.h  utility.h
